--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2775,20 +2775,34 @@
                                     // This forces windowsHTML to be recalculated with current QTH
                                     if (marker.getPopup() && marker.getPopup().isOpen()) {
                                         setTimeout(() => {
-                                            // === IMAGE LOADING (now runs after popup is fully rendered) ===
-                                            const imageElement = document.getElementById(`station-image-${sanitizedCallsign}`);
-                                            const imageLink = document.getElementById(`image-link-${sanitizedCallsign}`);
-                                            const placeholder = document.getElementById(`image-placeholder-${sanitizedCallsign}`);
+                                            // === Load image and attach Sked handler AFTER popup is rendered ===
+                                            function setupPopupContent() {
+                                                const imageElement = document.getElementById(`station-image-${sanitizedCallsign}`);
+                                                const imageLink = document.getElementById(`image-link-${sanitizedCallsign}`);
+                                                const placeholder = document.getElementById(`image-placeholder-${sanitizedCallsign}`);
 
-                                            if (imageElement && imageLink && placeholder) {
-                                                // Check for band-specific thumbnail
-                                                fetch(bandSpecificThumbUrl, { method: 'HEAD' })
-                                                    .then(response => {
-                                                        if (response.ok) {
-                                                            imageElement.src = bandSpecificThumbUrl;
-                                                            imageLink.href = bandSpecificImageUrl;
-                                                            placeholder.style.display = 'none';
-                                                        } else {
+                                                if (imageElement && imageLink && placeholder) {
+                                                    fetch(bandSpecificThumbUrl, { method: 'HEAD' })
+                                                        .then(response => {
+                                                            if (response.ok) {
+                                                                imageElement.src = bandSpecificThumbUrl;
+                                                                imageLink.href = bandSpecificImageUrl;
+                                                                placeholder.style.display = 'none';
+                                                            } else {
+                                                                return fetch(genericThumbUrl, { method: 'HEAD' })
+                                                                    .then(genericResponse => {
+                                                                        if (genericResponse.ok) {
+                                                                            imageElement.src = genericThumbUrl;
+                                                                            imageLink.href = genericImageUrl;
+                                                                            placeholder.style.display = 'none';
+                                                                        } else {
+                                                                            imageElement.remove();
+                                                                            placeholder.style.display = 'block';
+                                                                        }
+                                                                    });
+                                                            }
+                                                        })
+                                                        .catch(() => {
                                                             return fetch(genericThumbUrl, { method: 'HEAD' })
                                                                 .then(genericResponse => {
                                                                     if (genericResponse.ok) {
@@ -2799,57 +2813,46 @@
                                                                         imageElement.remove();
                                                                         placeholder.style.display = 'block';
                                                                     }
-                                                                });
-                                                        }
-                                                    })
-                                                    .catch(() => {
-                                                        return fetch(genericThumbUrl, { method: 'HEAD' })
-                                                            .then(genericResponse => {
-                                                                if (genericResponse.ok) {
-                                                                    imageElement.src = genericThumbUrl;
-                                                                    imageLink.href = genericImageUrl;
-                                                                    placeholder.style.display = 'none';
-                                                                } else {
+                                                                })
+                                                                .catch(() => {
                                                                     imageElement.remove();
                                                                     placeholder.style.display = 'block';
-                                                                }
-                                                            })
-                                                            .catch(() => {
-                                                                imageElement.remove();
-                                                                placeholder.style.display = 'block';
-                                                            });
+                                                                });
+                                                        });
+                                                }
+
+                                                // === Sked button: refresh popup (which will re-run setupPopupContent) ===
+                                                const skedButton = document.getElementById(`sked-${sanitizedCallsign}`);
+                                                if (skedButton) {
+                                                    skedButton.onclick = null; // Prevent duplicate handlers
+                                                    skedButton.addEventListener('click', () => {
+                                                        const locator = skedButton.getAttribute('data-locator');
+                                                        document.getElementById('dx').value = locator;
+
+                                                        const inputEvent = new Event('input', { bubbles: true });
+                                                        document.getElementById('dx').dispatchEvent(inputEvent);
+
+                                                        // Refresh popup → triggers new content + image load
+                                                        if (marker.getPopup() && marker.getPopup().isOpen()) {
+                                                            setTimeout(() => marker.openPopup(), 150);
+                                                        }
                                                     });
+                                                }
+
+                                                // Other buttons (email, qrz)
+                                                const emailButton = document.getElementById(`email-${sanitizedCallsign}`);
+                                                if (emailButton) emailButton.addEventListener('click', () => {});
+
+                                                const qrzButton = document.getElementById(`qrz-${sanitizedCallsign}`);
+                                                if (qrzButton) qrzButton.addEventListener('click', () => {});
                                             }
 
-                                            // === SKED BUTTON HANDLER (with popup refresh) ===
-                                            const skedButton = document.getElementById(`sked-${sanitizedCallsign}`);
-                                            if (skedButton) {
-                                                skedButton.addEventListener('click', () => {
-                                                    const locator = skedButton.getAttribute('data-locator');
-                                                    document.getElementById('dx').value = locator;
+                                            // Run once now
+                                            setupPopupContent();
 
-                                                    const inputEvent = new Event('input', { bubbles: true });
-                                                    document.getElementById('dx').dispatchEvent(inputEvent);
-
-                                                    // Refresh popup to show updated common windows (and reload image)
-                                                    if (marker.getPopup() && marker.getPopup().isOpen()) {
-                                                        setTimeout(() => {
-                                                            marker.openPopup();
-                                                        }, 100);
-                                                    }
-                                                });
-                                            }
-
-                                            // Other button handlers (email, qrz) can stay as-is
-                                            const emailButton = document.getElementById(`email-${sanitizedCallsign}`);
-                                            if (emailButton) {
-                                                emailButton.addEventListener('click', () => {});
-                                            }
-
-                                            const qrzButton = document.getElementById(`qrz-${sanitizedCallsign}`);
-                                            if (qrzButton) {
-                                                qrzButton.addEventListener('click', () => {});
-                                            }
+                                            // Also run after any future popup refresh (e.g. date change)
+                                            marker.off('popupopen', setupPopupContent);
+                                            marker.on('popupopen', setupPopupContent);
                                         }, 100);
                                     }
                                 });
